<resources>
    <string name="app_name">MyRecipes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="toast">\"Please enter your email\"</string>
    <string name="choose_image">CHOOSE IMAGE</string>
    <string name="submit">SUBMIT</string>
    <string name="upload_image">UPLOAD</string>
    <string name="image">Image</string>
    <string name="download">DOWNLOAD</string>
    <string name="choose_local_image">CHOOSE LOCAL IMAGE</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="upload_view">UPLOAD VIEW</string>
    <string name="store_ingredient">Store ingredient</string>
    <string name="upload_image_btn_text">Upload Image</string>
    <string name="ingredient_description">Ingredient Description</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="picked_image">Picked Image</string>

    <string-array name="ingredients">
        <item>Eggs</item>
        <item>Flour</item>
        <item>Milk</item>
    </string-array>

    <string-array name="uom">
        <item>each</item>
        <item>of</item>
        <item>grams</item>
        <item>ml</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>pint</item>
        <item>lb</item>
        <item>oz</item>
        <item>fl.oz</item>
    </string-array>

    <string-array name="diet">
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Halal</item>
        <item>Kosher</item>
        <item>None</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes"> Real Canadian Maple Syrup next time\n
        I can use another fruit as a topping\n
        Kids loved these with Nutella!!</string>
    <string name="ingredients_card">* 100g Plain Flour\n* 2 Large Eggs\n
        * 300ml Milk\n
        * 1 tbsp sunflower or vegetable oil, plus a little extra for frying\n
        * Lemon wedges to serve\n
        * Caster Sugar to serve(optional)\n
        * Toppings of your choice(Strawberries, Blueberries, Cream
    </string>
    <string name="recipe_method">
    STEP 1\n
    Put 100g plain flour, 2 large eggs, 300ml milk,\n
    1 tbsp sunflower or vegetable oil and a pinch of salt into a bowl or large jug,\n
    then whisk to a smooth batter.\n
        STEP 2\n
        Set aside for 30 mins to rest if you have time, or start cooking straight away.\n
        Set a medium frying pan or crêpe pan over a medium heat and carefully wipe it with some oiled kitchen paper.
STEP 4\n
When hot, cook your pancakes for 1 min on each side until golden,\n
        keeping them warm in a low oven as you go.\n
STEP 5\n
Serve with lemon wedges and caster sugar, or your favourite filling.\n
        Once cold, you can layer the pancakes between baking parchment,\n
        then wrap in cling film and freeze for up to 2 months.
    </string>
</resources>